# buildk

./: .gitignore  Cargo.toml  README.md  TODO.md  buildk  lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: cache.rs  data.rs  lib.rs  output.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: build.rs  clean.rs  lib.rs  run.rs  target.rs  test.rs
crates/command/: Cargo.toml
crates/command/src/: build.rs  build_tree.rs  clean.rs  config.rs  dep_path.rs  deps.rs  fetch.rs  help.rs  init.rs  ksp.rs  lib.rs  list.rs  release.rs  run.rs  test.rs  tree.rs
crates/config/: Cargo.toml
crates/config/src/: build.rs  classpath.rs  config.rs  dependencies.rs  dependency.rs  errors.rs  kotlin.rs  lib.rs  manifest.rs  module.rs  project.rs  section.rs
crates/config/src/dependencies/: dependency.rs  kind.rs  mod.rs  test.rs
crates/config/src/modules/: module.rs
crates/config/src/project/: mod.rs  output.rs  project.rs  test.rs
crates/console/src/: colorize.rs  lib.rs  timer.rs
crates/dependencies/: Cargo.toml
crates/dependencies/src/: buildk_parser.rs  client.rs  gradle_parser.rs  ivy_parser.rs  lib.rs  maven_parser.rs  maven_parser2.rs
crates/dependency/: Cargo.toml
crates/dependency/src/: lib.rs
crates/dependency/src/parser/: gradle.rs  maven.rs  mod.rs
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs  toml.rs
crates/http/: Cargo.toml
crates/http/src/: client.rs  tokio_client.rs
crates/kotlin/: Cargo.toml
crates/kotlin/src/: build.rs  clean.rs  fetch.rs  lib.rs  release.rs  run.rs  target.rs  test.rs
crates/kotlinc/: Cargo.toml
crates/kotlinc/src/: build.rs  clean.rs  lib.rs  release.rs  run.rs  test.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: classpath.rs  config.rs  dependencies.rs  home.rs  kotlin.rs  lib.rs  manifest.rs  modules.rs  packages.rs  project.rs  repos.rs  repositories.rs
crates/process/: Cargo.toml
crates/process/src/: java.rs  kotlin.rs  lib.rs
crates/util/: Cargo.toml
crates/util/src/: buildk_output.rs  cmd.rs  colorize.rs  hasher.rs  lib.rs  option.rs  paths.rs  process_builder.rs  process_error.rs  sub_strings.rs  terminal.rs  timer.rs
docs/: gradle_module.md  jpms_jigsaw.md
example/: buildk.toml
example/src/: Main.kt  Prefix.kt  Suffix.kt
example/test/: PrefixTest.kt
src/: main.rs
test/: buildk  buildk.toml  config.toml
test/src/: Main.kt
