[package]
name = "buildk"
version = "0.1.0"
edition = "2021"
authors = ["Robin T <robin.tordly@gmail.com>"]
description = "A Kotlin build tool for the 21st century"
license = "MIT"

#[[bin]]
#name = "buildk"
#path = "main.rs"

[workspace]
members = ["crates/*"]

[profile.release]
#lto = true

[workspace.dependencies]
cache = { path = "crates/cache" }
command = { path = "crates/command" }
dependencies = { path = "crates/dependencies" }
manifest = { path = "crates/manifest" }
http = { path = "crates/http" }
util = { path = "crates/util" }

#clap = { version = "4.4.7", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
retry = "2.0.0"
filetime = "0.2.23"
home = "0.5.9"
itertools = "0.12.0"
libc = "0.2.152" # get exit codes from OS (SIGKILL, SIGINT etc)
regex = "1.10.2"

#reqwest = { version = "0.11.23", features = ["json", "stream", "blocking"]}
#crossbeam = "0.8.4"
async-std = "1.12.0"
async-recursion = "1.0.5"
futures = "0.3.30"
surf = "2.3.2"

serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
toml = "0.8.8"
toml_edit = "0.21.0"
xml-rs = "0.8.4"
roxmltree = "0.19.0"

#multi-spinner = "0.1.0"
spinners = "4.1.1"
#crossterm = "0.27.0"

# graph lib - topological sort
gryf = { git = "https://github.com/pnevyk/gryf.git" }

[dependencies]
anyhow.workspace = true
itertools.workspace = true
#clap.workspace = true

command.workspace = true
manifest.workspace = true
util.workspace = true
