[package]
name = "buildk"
version = "0.1.0"
edition = "2021"
authors = ["Robin T <robin.tordly@gmail.com>"]
description = "A Kotlin build tool for the 21st century"
license = "MIT"

#[[bin]]
#name = "buildk"
#path = "main.rs"

[workspace]
members = ["crates/*"]

[profile.release]
#lto = true

[workspace.dependencies]
cache = { path = "crates/cache" }
command = { path = "crates/command" }
dependency = { path = "crates/dependency" }
manifest = { path = "crates/manifest" }
process = { path = "crates/process" }
http = { path = "crates/http" }
util = { path = "crates/util" }

clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
retry = "2.0.0"
filetime = "0.2.23"
home = "0.5.9"
libc = "0.2.155" # get exit codes from OS (SIGKILL, SIGINT etc)
async-std = "1.12.0"
async-recursion = "1.1.1"
futures = "0.3.30"
surf = "2.3.2"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
toml = "0.8.13"
toml_edit = "0.22.13"
xml-rs = "0.8.20"
roxmltree = "0.20.0"
spinners = "4.1.1"
termtree = "0.4.1"

# todo: print messges and progress with prodash
#prodash = "28.0.0"

# graph lib - topological sort
gryf = { git = "https://github.com/pnevyk/gryf.git" }

[dependencies]
anyhow.workspace = true
command.workspace = true
manifest.workspace = true
util.workspace = true
