[package]
name = "command"
version = "0.1.0"
edition = "2021"

[dependencies]
cache.workspace = true
manifest.workspace = true
home.workspace = true
http.workspace = true
util.workspace = true
process.workspace = true

itertools.workspace = true
gryf.workspace = true
anyhow.workspace = true
clap.workspace = true

async-std.workspace = true
async-recursion.workspace = true
futures.workspace = true

#multi-spinner.workspace = true
spinners.workspace = true
