[package]
name = "command"
version = "0.1.0"
edition = "2021"

[dependencies]
cache.workspace = true
manifest.workspace = true
home.workspace = true
http.workspace = true
util.workspace = true
process.workspace = true

gryf.workspace = true
anyhow.workspace = true
clap.workspace = true

async-std.workspace = true
futures.workspace = true
spinners.workspace = true
termtree.workspace = true
