[package]
name = "dependency"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
anyhow.workspace = true
roxmltree.workspace = true 
surf.workspace = true
async-std.workspace = true
gryf.workspace = true
home.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

